--- a/index.html
+++ b/index.html
@@ -190,8 +190,10 @@
                     <p>© 2021 Auto theme by Kartanbaev Chingiz</p>
                 </div>
 
-                <div>
-                    
+                <div class="nuris2">
+                    <a href="#"><img class="nuris" src="img/linkedin.png" alt=""></a>
+                    <a  href="https://www.facebook.com/chingizk.kartanbaev.9/"><img class="nuris" src="img/facebook.png" alt=""></a>
+                    <a  href="https://www.instagram.com/kartanbaeev/?hl=ru"><img class="nuris" src="img/instagram.png" alt=""></a>
                 </div>
             </div>
         </footer>
