--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href=".">
                             OUR SERVICES
                         </a>
                     </li>
@@ -73,22 +73,61 @@
             <div class="container">
                 <h1 class="title_our_services">Our services</h1>
                 <p class="under_title">View all services</p>
-                <div class="fotos">
-                    <div class="firsst">
-                        <img class="foto" src="img/5b98bf25-1b22-4d52-8b67-a1b00d894172.jfif" alt="">
-                        <div class="second">
-                        </div>
-
-                        <p class="foto_title">Diagnostic</p>
+                <div class="wrapper">
+                    <div class="block2">
+                        <a href="#" class="services__item">
+                            <div class="services__content" style="background-image:url('img/5b98bf25-1b22-4d52-8b67-a1b00d894172.jfif');">
+                                <div class="services__content-item">
+                                    <div class="services__img">
+                                        <img src="img/plus.svg" alt="">
+                                    </div>
+                                    <p class="services__text">
+                                        ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
+                                    </p>
+                                </div>
+                            </div>
+                            <h3 class="services__title">
+                                DIAGNOSTIC
+                            </h3>
+                        </a>
                     </div>
-                    <div>
-                        <img class="foto" src="img/aa6aef0b-91f1-4cd8-b483-ba48ae72f625.jfif" alt="">
-                        <p class="foto_title">Tires & wheels</p>
+                    <!--/block-->
+                    <div class="block">
+                        <a href="#" class="services__item">
+                            <div class="services__content" style="background-image:url('img/aa6aef0b-91f1-4cd8-b483-ba48ae72f625.jfif');">
+                                <div class="services__content-item">
+                                    <div class="services__img">
+                                        <img src="img/plus.svg" alt="">
+                                    </div>
+                                    <p class="services__text">
+                                        ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
+                                    </p>
+                                </div>
+                            </div>
+                            <h3 class="services__title">
+                                TIRES & WHEELS
+                            </h3>
+                        </a>
                     </div>
-                    <div>
-                        <img class="foto" src="img/35488104-0d24-4347-b939-c5309321974c.jfif" alt="">
-                        <p class="foto_title">engines</p>
+                    <!--/block-->
+                    <div class="block">
+                        <a href="#" class="services__item">
+                            <div class="services__content" style="background-image:url('img/35488104-0d24-4347-b939-c5309321974c.jfif');">
+                                <div class="services__content-item">
+                                    <div class="services__img">
+                                        <img src="img/plus.svg" alt="">
+                                    </div>
+                                    <p class="services__text">
+                                        ANNUAL CHECKUPS FROM YOUR PHYSICIAN KEEP YOU IN GOOD HEALTH
+                                    </p>
+                                </div>
+                            </div>
+                            <h3 class="services__title">
+                                ENGINES
+                            </h3>
+                        </a>
                     </div>
+                    <!--/block-->
                 </div>
                 
             </div>
